--- a/TestSIOS/TestSIOS.csproj
+++ b/TestSIOS/TestSIOS.csproj
@@ -211,8 +211,12 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="images\naukowe.jpg" />
+    <Content Include="images\wojsko.jpg" />
     <None Include="Properties\PublishProfiles\gaz - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="images\impreza.jpg" />
+    <Content Include="index.html" />
     <Content Include="Scripts\ai.0.22.19-build00125.js" />
     <Content Include="Scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="Scripts\bootstrap.js" />
