--- a/TestSIOS/TestSIOS.csproj
+++ b/TestSIOS/TestSIOS.csproj
@@ -216,6 +216,7 @@
     <None Include="Properties\PublishProfiles\gaz - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\gaz - Web Deploy %283%29.pubxml" />
     <None Include="Properties\PublishProfiles\gaz - Web Deploy %284%29.pubxml" />
+    <None Include="Properties\PublishProfiles\gaz - Web Deploy %285%29.pubxml" />
     <None Include="Properties\PublishProfiles\gaz - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\projekty - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\projekty - Web Deploy.pubxml" />
