--- a/G.A.Z.SIOS/G.A.Z.SIOS.csproj
+++ b/G.A.Z.SIOS/G.A.Z.SIOS.csproj
@@ -215,6 +215,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911101451323_InitialCreate.cs" />
+    <Compile Include="Migrations\201911101451323_InitialCreate.Designer.cs">
+      <DependentUpon>201911101451323_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201911112216203_InitiCreate.cs" />
+    <Compile Include="Migrations\201911112216203_InitiCreate.Designer.cs">
+      <DependentUpon>201911112216203_InitiCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\EventViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -340,6 +349,14 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201911101451323_InitialCreate.resx">
+      <DependentUpon>201911101451323_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911112216203_InitiCreate.resx">
+      <DependentUpon>201911112216203_InitiCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
