--- a/G.A.Z.SIOS/bin/G.A.Z.SIOS.dll.config
+++ b/G.A.Z.SIOS/bin/G.A.Z.SIOS.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=bazagaz.database.windows.net;Initial Catalog=gaz_db;Persist Security Info=True;User ID=gazadmin;Password=G@z12345" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=sios.database.windows.net;Initial Catalog=sios;Persist Security Info=True;User ID=sios;Password=G@z12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
