--- a/G.A.Z.SIOS/G.A.Z.SIOS.csproj
+++ b/G.A.Z.SIOS/G.A.Z.SIOS.csproj
@@ -249,6 +249,7 @@
     <Content Include="Images\naukowe.jpg" />
     <Content Include="Images\paulina.jpg" />
     <Content Include="Images\seba.jpg" />
+    <Content Include="Images\siedziba.jpg" />
     <Content Include="Images\wojsko.jpg" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
