--- a/G.A.Z.SIOS/G.A.Z.SIOS.csproj
+++ b/G.A.Z.SIOS/G.A.Z.SIOS.csproj
@@ -228,9 +228,11 @@
     <Compile Include="Models\EventViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ImageViewModels.cs" />
+    <Compile Include="Models\InterestedViewModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\OpiniaViewModels.cs" />
-    <Compile Include="Models\ParticipantViewModel.cs" />
+    <Compile Include="Models\ParticipantViewModels.cs" />
+    <Compile Include="Models\PointsViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
